@@ -1,3 +1,8 @@
+2013-11-27  Kugan Vivekanandarajah  <kuganv@linaro.org>
+
+	* doc/tm.texi.in (TARGET_HAS_NO_HW_DIVIDE): Define.
+	* doc/tm.texi (TARGET_HAS_NO_HW_DIVIDE): Regenerate.
+
 2013-11-27  Marek Polacek  <polacek@redhat.com>
 
 	PR sanitizer/59306
